# nextsimroms_apptainer

./: README.md  base-dev.def  netcdf-dev.def  nextsim-dev.def  nextsim.def  nextsim_patch.def  nextsimroms.def  oasis.def  oasis3-mct.def
doc/: build_roms.md
examples/2comp/: Makefile  datetime_mod.F90  esm.F90  esmApp.nml  esmfutils.F90  ice.F90  mainApp.F90  mainApp.nml  nextsimroms.yml  ocn.F90
examples/diffusion/: CMakeLists.txt  Makefile  diffcode.F90  generic_component_mod.F90  ice.F90  ocean.F90  run.sl  tovtk_mod.F90
examples/diffusion/oi_data/: model.nml  namcouple
examples/dist_array/: Makefile  dist_array.F90
examples/ice_ocn/: Makefile  README  conn.F90  esm.F90  esmApp.F90  esmfarrayptr.F90  esmfutils.F90  ice.F90  mainApp.nml  nextsimroms.yml  ocn.F90
examples/ice_ocn_oasis/: Makefile  ice.F90  run.ksh
examples/oasis_ice_ocn/: Makefile  ice.F90  ocn.F90
examples/ocean_atmos/: Makefile  ocean.F90  read_grid.F90
examples/ocean_atmos_oasis/: Makefile  run_spoc
examples/ocean_ice_oasis/: Makefile  generate_grid.py  generate_restart.py  ice.F90  ocean.F90  plot_mesh.py  read_grid.F90  run.sh  test_tovtk.F90  tovtk.F90
examples/simple_oasis/: Makefile  atmos.F90  ocean.F90  tovtk.F90
examples/simple_oasis2/: Makefile
intelmpi/: base-dev.def  oasis.def
openmpi/: base-dev.def  netcdf-dev.def  sourceme.sh
run/: Makefile  README.md  exception_mod.mod  generic_component_mod.F90  generic_component_mod.mod  grid_mod.mod  job_submit.sh  nextsim.sh  ocean.F90  ocean.sh  tovtk_mod.mod
tests/: hello.f90  hello.sl  sendrecv.f90  sendrecv.sl
(+55 files in other folders)
